--- a/style.css
+++ b/style.css
@@ -79,17 +79,21 @@ header{
 .container{
     width:90%;
     display:flex;
-    margin: 20px 50px 30px 50px;
+    margin: 20px 50px 10px 50px;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    overflow:hidden;
     /* grid: auto-flow /  1fr 1fr 1fr; */
 }
 .divs{
+    text-overflow: "…";
     background-color: #433;
     border:5px solid #433; 
     display:flex; 
     flex-direction: column; 
+    max-height: 380px;
+    max-width:230px;
     /* justify-content:center; */
     /* max-height: 430px;
     max-width:230px; */
@@ -107,6 +111,7 @@ header{
     max-width:200px;
 }
 .p1{
+    text-overflow: "…";
     text-align: center; 
     margin:10px 5px;
     max-width:190px;
@@ -135,5 +140,15 @@ header{
     }
     .logo{
         padding: 10px;
+    }
+    .container{
+        width:90%;
+        display:flex;
+        margin: 20px 20px 10px 20px;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        overflow:hidden;
+        /* grid: auto-flow /  1fr 1fr 1fr; */
     }
 }
