--- a/style.css
+++ b/style.css
@@ -93,17 +93,14 @@ header{
     /* grid: auto-flow /  1fr 1fr 1fr; */
 }
 .divs{
-    text-overflow: "…";
     background-color: #433;
     border:5px solid #433; 
     display:flex; 
     flex-direction: column; 
+    align-items: center;
     max-height: 380px;
+    overflow: hidden;
     max-width:230px;
-    /* justify-content:center; */
-    /* max-height: 430px;
-    max-width:230px; */
-    overflow:hidden;
     margin:20px 20px;
 }
 .imgDivs{
